Closed Bug 1548513 Opened 5 years ago Closed 5 years ago

Bustage on /builds/worker/workspace/build/src/dom/base/ResizeObserverController.cpp when Gecko 68 merges to Beta on 2019-05-06

Categories

(Core :: DOM: Core & HTML, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla68
Tracking Status
firefox-esr60 --- unaffected
firefox66 --- unaffected
firefox67 --- unaffected
firefox68 blocking verified

People

(Reporter: opoprus, Assigned: jcristau)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Flags: needinfo?(emilio)
Regressed by: 1548057
Keywords: regression
Severity: normal → major

Thanks Julien!

Flags: needinfo?(emilio)
Attachment #9062219 - Attachment description: Bug 1548513 - fix bustage in ResizeObserver with diagnostic asserts disabled. r?emilio → Bug 1548513 - fix bustage in ResizeObserver with diagnostic asserts disabled. r=emilio
Pushed by jcristau@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/414ff611f77f
fix bustage in ResizeObserver with diagnostic asserts disabled. r=emilio
Assignee: nobody → jcristau
Status: NEW → ASSIGNED
Priority: -- → P1
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68

Please specify a root cause for this bug. See :tmaity for more information.

Root Cause: --- → ?
Root Cause: ? → Infrastructure/Build Error
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: