Bug 1548513 - fix bustage in ResizeObserver with diagnostic asserts disabled. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D29677

--HG--
extra : moz-landing-system : lando